--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
 <body>
   <header>
     <div class="row center-align" id="pageHeader">
-      <div class="col m6">
+        <br>
+        <img src="assets/img/logo.png" alt="Run The Numbers PDX" width="600px">
         <br>
         <br>
-        <img src="assets/img/run.png" alt="Run The Numbers PDX" width="500px">
+        <a href="https://github.com/winnk/D4" class="center-align waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
         <br>
         <br>
-        <br>
-        <a href="https://github.com/winnk/D4" class="waves-effect waves-light btn-large  amber lighten-1">Documentation</a>
-      </div>
-      <div class="col m6">
-      </div>
+  
     </div>
     <div class="row" id="teamRow">
 
